edition = "2023";

package builds.java;

option java_multiple_files = true;
option java_package = "com.vtaveira.builds.java";


message PrivateMessageRequest {
  string toUsername = 1;
  string content = 2;
}